--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
         <p class="card-2__name">birds</p>
         <audio class="card-2__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
     </div>
+    <br>
+    <div align='center' class="card-3">
+        <img class="card-3__img" src="https://zaxid.net/resources/photos/news/202112/1531934_2136850.jpg?202112091121" alt="">
+        <p class="card-3__name">birds</p>
+        <audio class="card-3__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
+    </div>
+
+    <div align='center' class="card-4">
+        <img class="card-4__img" src="https://tsikaviy-svit.com/upload/images/%D0%BF%D1%82%D0%B0%D1%88%D0%BA%D0%B0.jpg" alt="">
+        <p class="card-4__name">birds</p>
+        <audio class="card-4__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
+    </div>
 </body>
 </html>
