--- a/index.html
+++ b/index.html
@@ -10,29 +10,50 @@
     <title>Audio</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <div align="center" class="card-1">
-        <img class="card-1__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGr6E6RRRGiWw-6Q4Pk4etdtgjogBsd6jcdg&usqp=CAU" alt="">
-        <p class="card-1__name">birds</p>
-        <audio class="card-1__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
-    </div>
+    <header class="header">
+        <div class="header_body">
+            <img class="header __logo" src="https://cdn.dribbble.com/users/60166/screenshots/13967952/media/9ea8447026fdcadf66196aa38fcc0207.jpg?compress=1&resize=400x300&vertical=top" alt="">
+            <ul class="header__menu">
+                <li>
+                    <a href="./video.html">video</a>
+                </li>
+                <li>
+                    <a href="#">pictures</a>
+                </li>
+                <li>
+                    <a href="./index.html">audio</a>
+                </li>
+            </ul>
+            <button class="header__button">Log in</button>
+        </div>
+    </header>
 
-    <div align='center' class="card-2">
-        <img class="card-2__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdoKcyRQeJrfhxNZQJsRNWQnD6X0qxx7DPiA&usqp=CAU" alt="">
-        <p class="card-2__name">birds</p>
-        <audio class="card-2__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
-    </div>
-    <br>
-    <div align='center' class="card-3">
-        <img class="card-3__img" src="https://zaxid.net/resources/photos/news/202112/1531934_2136850.jpg?202112091121" alt="">
-        <p class="card-3__name">birds</p>
-        <audio class="card-3__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
-    </div>
+    <main class="main">
+        <div align="center" class="card-1">
+            <img class="card-1__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGr6E6RRRGiWw-6Q4Pk4etdtgjogBsd6jcdg&usqp=CAU" alt="">
+            <p class="card-1__name">birds</p>
+            <audio class="card-1__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
+        </div>
 
-    <div align='center' class="card-4">
-        <img class="card-4__img" src="https://tsikaviy-svit.com/upload/images/%D0%BF%D1%82%D0%B0%D1%88%D0%BA%D0%B0.jpg" alt="">
-        <p class="card-4__name">birds</p>
-        <audio class="card-4__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
-    </div>
+        <div align='center' class="card-2">
+            <img class="card-2__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdoKcyRQeJrfhxNZQJsRNWQnD6X0qxx7DPiA&usqp=CAU" alt="">
+            <p class="card-2__name">birds</p>
+            <audio class="card-2__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
+        </div>
+        <br>
+        <div align='center' class="card-3">
+            <img class="card-3__img" src="https://zaxid.net/resources/photos/news/202112/1531934_2136850.jpg?202112091121" alt="">
+            <p class="card-3__name">birds</p>
+            <audio class="card-3__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
+        </div>
+
+        <div align='center' class="card-4">
+            <img class="card-4__img" src="https://tsikaviy-svit.com/upload/images/%D0%BF%D1%82%D0%B0%D1%88%D0%BA%D0%B0.jpg" alt="">
+            <p class="card-4__name">birds</p>
+            <audio class="card-4__music" src="./music/mixkit-little-birds-singing-in-the-trees-17.wav"controls></audio>
+        </div>
+    </main>
 </body>
 </html>
